comm/iridium: Clean URL construction future deprecation.